# hyfetch

./: .editorconfig  .gitattributes  Cargo.toml
crates/hyfetch/: Cargo.toml  build.rs
crates/hyfetch/src/: Makefile  ascii.rs  cli_options.rs  color_util.rs  distros.rs  lib.rs  model.rs  models.rs  neofetch_util.rs  presets.rs  pride_month.rs  types.rs  utils.rs
hyfetch/distros/: distro_detector.py
